deploy: 9b44b4209a3973196d763a43a3648cc673ccb4a3

--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; coolpropx v0.1.2 documentation</title>
+    <title>Index &#8212; coolpropx v0.2.2 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=78fd30dd"></script>
+    <script src="_static/documentation_options.js?v=a6e268a8"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">coolpropx v0.1.2 documentation</p>
+    <p class="title logo__title">coolpropx v0.2.2 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -313,6 +313,10 @@ document.write(`
       <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.blend_properties">blend_properties() (in module coolpropx.core_calculations)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.build_alias_map">build_alias_map() (in module coolpropx.fluid_properties)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="C">C</h2>
@@ -329,6 +333,8 @@ document.write(`
       <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.calculate_supersaturation">calculate_supersaturation() (in module coolpropx.core_calculations)</a>
 </li>
       <li><a href="source/api/coolpropx.utils.html#coolpropx.utils.check_lists_match">check_lists_match() (in module coolpropx.utils)</a>
+</li>
+      <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.compute_dsdp_q">compute_dsdp_q() (in module coolpropx.core_calculations)</a>
 </li>
       <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.compute_properties">compute_properties() (in module coolpropx.core_calculations)</a>
 </li>
@@ -438,6 +444,8 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.FluidState.get">get() (coolpropx.fluid_properties.FluidState method)</a>
 </li>
+      <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.get_conductivity">get_conductivity() (in module coolpropx.core_calculations)</a>
+</li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.Fluid.get_property">get_property() (coolpropx.fluid_properties.Fluid method)</a>
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.Fluid.get_state">get_state() (coolpropx.fluid_properties.Fluid method)</a>
@@ -452,6 +460,8 @@ document.write(`
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.Fluid.get_states">get_states() (coolpropx.fluid_properties.Fluid method)</a>
 </li>
+      <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.get_viscosity">get_viscosity() (in module coolpropx.core_calculations)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -462,11 +472,13 @@ document.write(`
 </li>
       <li><a href="source/api/coolpropx.utils.html#coolpropx.utils.is_float">is_float() (in module coolpropx.utils)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.utils.html#coolpropx.utils.is_numeric">is_numeric() (in module coolpropx.utils)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.is_odd">is_odd() (in module coolpropx.math)</a>
+</li>
+      <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.is_pure_substance">is_pure_substance() (in module coolpropx.fluid_properties)</a>
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.FluidState.items">items() (coolpropx.fluid_properties.FluidState method)</a>
 </li>
@@ -509,9 +521,15 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.Fluid.plot_phase_diagram">plot_phase_diagram() (coolpropx.fluid_properties.Fluid method)</a>
 </li>
+      <li><a href="source/api/coolpropx.utils.html#coolpropx.utils.print_dict">print_dict() (in module coolpropx.utils)</a>
+</li>
+      <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.print_fluid_names">print_fluid_names() (in module coolpropx.fluid_properties)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.graphics.html#coolpropx.graphics.print_installed_fonts">print_installed_fonts() (in module coolpropx.graphics)</a>
+</li>
+      <li><a href="source/api/coolpropx.utils.html#coolpropx.utils.print_object">print_object() (in module coolpropx.utils)</a>
 </li>
       <li><a href="source/api/coolpropx.graphics.html#coolpropx.graphics.print_rc_parameters">print_rc_parameters() (in module coolpropx.graphics)</a>
 </li>
@@ -521,6 +539,8 @@ document.write(`
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.safe_alias_split">safe_alias_split() (in module coolpropx.fluid_properties)</a>
+</li>
       <li><a href="source/api/coolpropx.graphics.html#coolpropx.graphics.savefig_in_formats">savefig_in_formats() (in module coolpropx.graphics)</a>
 </li>
       <li><a href="source/api/coolpropx.graphics.html#coolpropx.graphics.scale_graphics_x">scale_graphics_x() (in module coolpropx.graphics)</a>
@@ -533,10 +553,10 @@ document.write(`
 </li>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.sigmoid_rational">sigmoid_rational() (in module coolpropx.math)</a>
 </li>
-      <li><a href="source/api/coolpropx.math.html#coolpropx.math.sigmoid_smootherstep">sigmoid_smootherstep() (in module coolpropx.math)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/coolpropx.math.html#coolpropx.math.sigmoid_smootherstep">sigmoid_smootherstep() (in module coolpropx.math)</a>
+</li>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.sigmoid_smoothstep">sigmoid_smoothstep() (in module coolpropx.math)</a>
 </li>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.sind">sind() (in module coolpropx.math)</a>
@@ -562,6 +582,8 @@ document.write(`
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.FluidState.to_dict">to_dict() (coolpropx.fluid_properties.FluidState method)</a>
+</li>
+      <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.try_initialize_fluid">try_initialize_fluid() (in module coolpropx.fluid_properties)</a>
 </li>
   </ul></td>
 </tr></table>
