deploy: c9cbed5094c085b7efa2af483b623eacec93c087

--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; coolpropx v0.2.11 documentation</title>
+    <title>Index &#8212; coolpropx v0.2.12 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=0e5a89ae"></script>
+    <script src="_static/documentation_options.js?v=192e09c8"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">coolpropx v0.2.11 documentation</p>
+    <p class="title logo__title">coolpropx v0.2.12 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -296,13 +296,15 @@ document.write(`
 </li>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.all_numeric">all_numeric() (in module coolpropx.math)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.arccosd">arccosd() (in module coolpropx.math)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.arcsind">arcsind() (in module coolpropx.math)</a>
 </li>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.arctand">arctand() (in module coolpropx.math)</a>
+</li>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.assemble_properties">assemble_properties() (in module coolpropx.perfect_gas.perfect_gas)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -326,6 +328,36 @@ document.write(`
 </li>
       <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.calculate_mixture_properties">calculate_mixture_properties() (in module coolpropx.core_calculations)</a>
 </li>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.calculate_properties_hP">calculate_properties_hP() (in module coolpropx.perfect_gas.perfect_gas)</a>
+
+      <ul>
+        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#coolpropx.perfect_gas.perfect_gas_props_functions.calculate_properties_hP">(in module coolpropx.perfect_gas.perfect_gas_props_functions)</a>
+</li>
+      </ul></li>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.calculate_properties_hs">calculate_properties_hs() (in module coolpropx.perfect_gas.perfect_gas)</a>
+
+      <ul>
+        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#coolpropx.perfect_gas.perfect_gas_props_functions.calculate_properties_hs">(in module coolpropx.perfect_gas.perfect_gas_props_functions)</a>
+</li>
+      </ul></li>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.calculate_properties_Ps">calculate_properties_Ps() (in module coolpropx.perfect_gas.perfect_gas)</a>
+
+      <ul>
+        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#coolpropx.perfect_gas.perfect_gas_props_functions.calculate_properties_Ps">(in module coolpropx.perfect_gas.perfect_gas_props_functions)</a>
+</li>
+      </ul></li>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.calculate_properties_PT">calculate_properties_PT() (in module coolpropx.perfect_gas.perfect_gas)</a>
+
+      <ul>
+        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#coolpropx.perfect_gas.perfect_gas_props_functions.calculate_properties_PT">(in module coolpropx.perfect_gas.perfect_gas_props_functions)</a>
+</li>
+      </ul></li>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.calculate_properties_rhoh">calculate_properties_rhoh() (in module coolpropx.perfect_gas.perfect_gas)</a>
+
+      <ul>
+        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#coolpropx.perfect_gas.perfect_gas_props_functions.calculate_properties_rhoh">(in module coolpropx.perfect_gas.perfect_gas_props_functions)</a>
+</li>
+      </ul></li>
       <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.calculate_subcooling">calculate_subcooling() (in module coolpropx.core_calculations)</a>
 </li>
       <li><a href="source/api/coolpropx.core_calculations.html#coolpropx.core_calculations.calculate_superheating">calculate_superheating() (in module coolpropx.core_calculations)</a>
@@ -366,6 +398,15 @@ document.write(`
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.compute_spinodal_point_general">compute_spinodal_point_general() (in module coolpropx.fluid_properties)</a>
 </li>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.conductivity_from_T">conductivity_from_T() (in module coolpropx.perfect_gas.perfect_gas)</a>
+</li>
+      <li>
+    coolpropx
+
+      <ul>
+        <li><a href="source/api/coolpropx.html#module-coolpropx">module</a>
+</li>
+      </ul></li>
       <li>
     coolpropx.core_calculations
 
@@ -388,10 +429,38 @@ document.write(`
 </li>
       </ul></li>
       <li>
+    coolpropx.jax_import
+
+      <ul>
+        <li><a href="source/api/coolpropx.jax_import.html#module-coolpropx.jax_import">module</a>
+</li>
+      </ul></li>
+      <li>
     coolpropx.math
 
       <ul>
         <li><a href="source/api/coolpropx.math.html#module-coolpropx.math">module</a>
+</li>
+      </ul></li>
+      <li>
+    coolpropx.perfect_gas
+
+      <ul>
+        <li><a href="source/api/coolpropx.perfect_gas.html#module-coolpropx.perfect_gas">module</a>
+</li>
+      </ul></li>
+      <li>
+    coolpropx.perfect_gas.perfect_gas
+
+      <ul>
+        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#module-coolpropx.perfect_gas.perfect_gas">module</a>
+</li>
+      </ul></li>
+      <li>
+    coolpropx.perfect_gas.perfect_gas_props_functions
+
+      <ul>
+        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#module-coolpropx.perfect_gas.perfect_gas_props_functions">module</a>
 </li>
       </ul></li>
       <li>
@@ -413,6 +482,12 @@ document.write(`
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.entropy_from_PT">entropy_from_PT() (in module coolpropx.perfect_gas.perfect_gas)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.entropy_from_rhoP">entropy_from_rhoP() (in module coolpropx.perfect_gas.perfect_gas)</a>
+</li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.extract_vars">extract_vars() (in module coolpropx.fluid_properties)</a>
 </li>
   </ul></td>
@@ -493,13 +568,23 @@ document.write(`
     module
 
       <ul>
+        <li><a href="source/api/coolpropx.html#module-coolpropx">coolpropx</a>
+</li>
         <li><a href="source/api/coolpropx.core_calculations.html#module-coolpropx.core_calculations">coolpropx.core_calculations</a>
 </li>
         <li><a href="source/api/coolpropx.fluid_properties.html#module-coolpropx.fluid_properties">coolpropx.fluid_properties</a>
 </li>
         <li><a href="source/api/coolpropx.graphics.html#module-coolpropx.graphics">coolpropx.graphics</a>
 </li>
+        <li><a href="source/api/coolpropx.jax_import.html#module-coolpropx.jax_import">coolpropx.jax_import</a>
+</li>
         <li><a href="source/api/coolpropx.math.html#module-coolpropx.math">coolpropx.math</a>
+</li>
+        <li><a href="source/api/coolpropx.perfect_gas.html#module-coolpropx.perfect_gas">coolpropx.perfect_gas</a>
+</li>
+        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#module-coolpropx.perfect_gas.perfect_gas">coolpropx.perfect_gas.perfect_gas</a>
+</li>
+        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#module-coolpropx.perfect_gas.perfect_gas_props_functions">coolpropx.perfect_gas.perfect_gas_props_functions</a>
 </li>
         <li><a href="source/api/coolpropx.utils.html#module-coolpropx.utils">coolpropx.utils</a>
 </li>
@@ -510,14 +595,16 @@ document.write(`
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.perfect_gas_props">perfect_gas_props() (in module coolpropx.perfect_gas.perfect_gas)</a>
+</li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.Fluid.plot_phase_diagram">plot_phase_diagram() (coolpropx.fluid_properties.Fluid method)</a>
 </li>
       <li><a href="source/api/coolpropx.utils.html#coolpropx.utils.print_dict">print_dict() (in module coolpropx.utils)</a>
 </li>
-      <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.print_fluid_names">print_fluid_names() (in module coolpropx.fluid_properties)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.print_fluid_names">print_fluid_names() (in module coolpropx.fluid_properties)</a>
+</li>
       <li><a href="source/api/coolpropx.graphics.html#coolpropx.graphics.print_installed_fonts">print_installed_fonts() (in module coolpropx.graphics)</a>
 </li>
       <li><a href="source/api/coolpropx.utils.html#coolpropx.utils.print_object">print_object() (in module coolpropx.utils)</a>
@@ -544,12 +631,12 @@ document.write(`
 </li>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.sigmoid_rational">sigmoid_rational() (in module coolpropx.math)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.sigmoid_smootherstep">sigmoid_smootherstep() (in module coolpropx.math)</a>
 </li>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.sigmoid_smoothstep">sigmoid_smoothstep() (in module coolpropx.math)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.sind">sind() (in module coolpropx.math)</a>
 </li>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.smooth_abs">smooth_abs() (in module coolpropx.math)</a>
@@ -557,6 +644,14 @@ document.write(`
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.smooth_maximum">smooth_maximum() (in module coolpropx.math)</a>
 </li>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.smooth_minimum">smooth_minimum() (in module coolpropx.math)</a>
+</li>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.specific_heat">specific_heat() (in module coolpropx.perfect_gas.perfect_gas)</a>
+
+      <ul>
+        <li><a href="source/api/coolpropx.perfect_gas.perfect_gas_props_functions.html#coolpropx.perfect_gas.perfect_gas_props_functions.specific_heat">(in module coolpropx.perfect_gas.perfect_gas_props_functions)</a>
+</li>
+      </ul></li>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.speed_of_sound_from_T">speed_of_sound_from_T() (in module coolpropx.perfect_gas.perfect_gas)</a>
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.states_to_dict">states_to_dict() (in module coolpropx.fluid_properties)</a>
 </li>
@@ -570,8 +665,12 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.math.html#coolpropx.math.tand">tand() (in module coolpropx.math)</a>
 </li>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.temperature_from_h">temperature_from_h() (in module coolpropx.perfect_gas.perfect_gas)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.temperature_from_Ps">temperature_from_Ps() (in module coolpropx.perfect_gas.perfect_gas)</a>
+</li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.FluidState.to_dict">to_dict() (coolpropx.fluid_properties.FluidState method)</a>
 </li>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.try_initialize_fluid">try_initialize_fluid() (in module coolpropx.fluid_properties)</a>
@@ -583,6 +682,10 @@ document.write(`
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/coolpropx.fluid_properties.html#coolpropx.fluid_properties.FluidState.values">values() (coolpropx.fluid_properties.FluidState method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/coolpropx.perfect_gas.perfect_gas.html#coolpropx.perfect_gas.perfect_gas.viscosity_from_T">viscosity_from_T() (in module coolpropx.perfect_gas.perfect_gas)</a>
 </li>
   </ul></td>
 </tr></table>
